tests/ui/proc-macro/derive-still-gated.stderr
error: cannot find attribute `derive_Empty` in this scope
  --> $DIR/derive-still-gated.rs:6:3
   |
LL | #[derive_Empty]
   |   ^^^^^^^^^^^^

error: aborting due to 1 previous error

